subheading css fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,29 @@
     </header>
 
     <main>
+      <div class="subHeading">
+        <div class="box">
+          0.7%
+          <div class="smallGrey">5 mins</div>
+        </div>
+        <div class="box">
+          1.32%
+          <div class="smallGrey">1 Hour</div>
+        </div>
+        <div class="bigBox">
+          <div class="grey">Best Price to Trade</div>
+          ₹ 36,16,985
+          <div class="smallGrey">Average BTC/INR new price including commission</div>
+        </div>
+        <div class="box">
+          0.7%
+          <div class="smallGrey">5 mins</div>
+        </div>
+        <div class="box">
+          0.7%
+          <div class="smallGrey">5 mins</div>
+        </div>
+      </div>
       <table>
         <thead class="table_head">
           <th>#</th>
